# chatpi_for_detective_novels

./: .gitignore  README.md  final_project_nlp.ipynb  pyproject.toml
src/: prompt_processor.py
src/data/hound_of_baskervilles/: antagonist.txt  combined.txt  evidence.txt  protagonist.txt  resolution.txt  test.txt
