[tool.poetry]
name = "chatpi-for-detective-novels"
version = "0.1.0"
description = ""
authors = ["bdfinlayson <bdfinlayson@gmail.com>"]
readme = "README.md"
packages = [{include = "chatpi_for_detective_novels"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
