[tool.poetry]
name = "chatpi-for-detective-novels"
version = "0.1.0"
description = ""
authors = ["bdfinlayson <bdfinlayson@gmail.com>"]
readme = "README.md"
packages = [{include = "chatpi_for_detective_novels"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.35.0"
datasets = "^2.14.6"
evaluate = "^0.4.1"
torch = "^2.1.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
